--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Web Development</h1>
 <h2>HTML</h2>
-<p>I want to learn coding</p>
+<p>I want to learn coding now</p>
 <p>Find free resources on <a href="https://zenva.com" title="Learn Programming">Zenva</a></p>
 Link to <a href="newpage.html">another page</a>
